--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,12 @@
+/* Ensure the footer is at the bottom without overlapping content */
+
+
+
+
+
+
 footer{
-  position: relative;
+  position: fixed;
   bottom: 0;
   width: 100%;
   background-color: #30123B;
